--- a/Tailwind2/public/style.css
+++ b/Tailwind2/public/style.css
@@ -757,6 +757,10 @@ video {
   height: 3.5rem;
 }
 
+.h-60 {
+  height: 15rem;
+}
+
 .h-8 {
   height: 2rem;
 }
@@ -767,6 +771,10 @@ video {
 
 .h-\[10px\] {
   height: 10px;
+}
+
+.h-\[112px\] {
+  height: 112px;
 }
 
 .h-\[116px\] {
@@ -789,16 +797,16 @@ video {
   height: 2px;
 }
 
+.h-\[32px\] {
+  height: 32px;
+}
+
 .h-\[38px\] {
   height: 38px;
 }
 
 .h-\[3rem\] {
   height: 3rem;
-}
-
-.h-\[40px\] {
-  height: 40px;
 }
 
 .h-\[450px\] {
@@ -849,14 +857,6 @@ video {
   height: 100%;
 }
 
-.h-40 {
-  height: 10rem;
-}
-
-.h-60 {
-  height: 15rem;
-}
-
 .min-h-\[540px\] {
   min-height: 540px;
 }
@@ -883,6 +883,10 @@ video {
 
 .w-80 {
   width: 20rem;
+}
+
+.w-\[100px\] {
+  width: 100px;
 }
 
 .w-\[10px\] {
@@ -919,6 +923,10 @@ video {
 
 .w-\[250px\] {
   width: 250px;
+}
+
+.w-\[262\.5px\] {
+  width: 262.5px;
 }
 
 .w-\[270px\] {
@@ -1145,11 +1153,6 @@ video {
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
 
-.bg-gray-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
-}
-
 .bg-header {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1176,11 +1179,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-yellow-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 249 195 / var(--tw-bg-opacity));
 }
 
 .bg-\[url\(\'\.\/images\/88-restaurant\.jpg\'\)\] {
@@ -1323,6 +1321,11 @@ video {
   padding-right: 3rem;
 }
 
+.px-16 {
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
+
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -1431,16 +1434,6 @@ video {
 .py-\[70px\] {
   padding-top: 70px;
   padding-bottom: 70px;
-}
-
-.px-14 {
-  padding-left: 3.5rem;
-  padding-right: 3.5rem;
-}
-
-.px-16 {
-  padding-left: 4rem;
-  padding-right: 4rem;
 }
 
 .pb-0 {
@@ -2535,6 +2528,25 @@ input::placeholder {
   gap: 1.25rem;
 }
 
+.flinkss {
+  display: flex;
+  gap: 0.5rem;
+}
+
+/* 
+.flinkss{
+  @apply 
+} */
+
+.uppercaseeF {
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 8px;
+  line-height: 15.4px;
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+}
+
 @media (max-width: 1000px) {
   .slideA {
     width: 32.6%;
@@ -2641,12 +2653,8 @@ input::placeholder {
     width: 24%;
   }
 
-  .md\:w-\[30\%\] {
-    width: 30%;
-  }
-
-  .md\:w-\[40\%\] {
-    width: 40%;
+  .md\:w-\[25\%\] {
+    width: 25%;
   }
 
   .md\:w-\[44\%\] {
@@ -2655,6 +2663,10 @@ input::placeholder {
 
   .md\:w-\[47\%\] {
     width: 47%;
+  }
+
+  .md\:w-\[50\%\] {
+    width: 50%;
   }
 
   .md\:w-\[53\%\] {
