--- a/Tailwind2/public/style.css
+++ b/Tailwind2/public/style.css
@@ -664,6 +664,10 @@ video {
   right: 7rem;
 }
 
+.right-\[1\.2px\] {
+  right: 1.2px;
+}
+
 .right-\[23px\] {
   right: 23px;
 }
@@ -688,6 +692,10 @@ video {
   top: -30%;
 }
 
+.top-\[0\.5px\] {
+  top: 0.5px;
+}
+
 .top-\[71\%\] {
   top: 71%;
 }
@@ -710,6 +718,18 @@ video {
 
 .z-50 {
   z-index: 50;
+}
+
+.order-1 {
+  order: 1;
+}
+
+.order-2 {
+  order: 2;
+}
+
+.order-3 {
+  order: 3;
 }
 
 .m-1 {
@@ -797,8 +817,8 @@ video {
   height: 2px;
 }
 
-.h-\[32px\] {
-  height: 32px;
+.h-\[33\.5px\] {
+  height: 33.5px;
 }
 
 .h-\[38px\] {
@@ -923,10 +943,6 @@ video {
 
 .w-\[250px\] {
   width: 250px;
-}
-
-.w-\[262\.5px\] {
-  width: 262.5px;
 }
 
 .w-\[270px\] {
@@ -1074,6 +1090,10 @@ video {
   gap: 2rem;
 }
 
+.gap-9 {
+  gap: 2.25rem;
+}
+
 .gap-\[12px\] {
   gap: 12px;
 }
@@ -1084,6 +1104,10 @@ video {
 
 .gap-\[3px\] {
   gap: 3px;
+}
+
+.gap-20 {
+  gap: 5rem;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -1143,11 +1167,6 @@ video {
   background-color: rgb(147 197 253 / var(--tw-bg-opacity));
 }
 
-.bg-blue-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
-}
-
 .bg-gray-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
@@ -1163,9 +1182,14 @@ video {
   background-color: rgb(205 162 116 / var(--tw-bg-opacity));
 }
 
-.bg-red-800 {
+.bg-hrbuttom {
   --tw-bg-opacity: 1;
-  background-color: rgb(153 27 27 / var(--tw-bg-opacity));
+  background-color: rgb(238 238 238 / var(--tw-bg-opacity));
+}
+
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
 .bg-trans {
@@ -1179,6 +1203,11 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .bg-\[url\(\'\.\/images\/88-restaurant\.jpg\'\)\] {
@@ -2547,6 +2576,10 @@ input::placeholder {
   font-family: "Montserrat", sans-serif;
 }
 
+.dput {
+  border: 1px solid white;
+}
+
 @media (max-width: 1000px) {
   .slideA {
     width: 32.6%;
@@ -2619,6 +2652,18 @@ input::placeholder {
 
   .md\:top-0 {
     top: 0px;
+  }
+
+  .md\:order-2 {
+    order: 2;
+  }
+
+  .md\:order-1 {
+    order: 1;
+  }
+
+  .md\:order-3 {
+    order: 3;
   }
 
   .md\:mt-2 {
@@ -2705,6 +2750,10 @@ input::placeholder {
     gap: 13px;
   }
 
+  .md\:gap-14 {
+    gap: 3.5rem;
+  }
+
   .md\:p-10 {
     padding: 2.5rem;
   }
@@ -2780,6 +2829,11 @@ input::placeholder {
   .md\:py-\[1\.8rem\] {
     padding-top: 1.8rem;
     padding-bottom: 1.8rem;
+  }
+
+  .md\:px-16 {
+    padding-left: 4rem;
+    padding-right: 4rem;
   }
 
   .md\:pb-14 {
